src/objects/TechnicalQualityReviewRevision__c.object
<CustomObject>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Technical Quality Review Revision</relationshipLabel>
        <relationshipName>TechnicalQualityReviewRevisionContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RevisionDate__c</fullName>
        <label>Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RevisionNumber__c</fullName>
        <label>Revision Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalQualityReview__c</fullName>
        <label>Technical Quality Review</label>
        <referenceTo>TechnicalQualityReview__c</referenceTo>
        <relationshipLabel>Technical Quality Review Revision</relationshipLabel>
        <relationshipName>TechnicalQualityReviewRevision</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Technical Quality Review Revision</label>
    <nameField>
        <displayFormat>TQRN-{0}</displayFormat>
        <label>Technical Quality Review Revision Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Quality Review Revision</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>